# BERT_tutorial

./: .gitignore  README.md  pyproject.toml
bert-it-1/: bert-it-vocab.txt
notebook/: 02_classification.ipynb  sample.ipynb
src/: main.py
src/bert_tutorial/: __init__.py  data_loader.py  dataset.py  embedding.py  encoder.py  model.py  multi_head_attention.py  optimizer.py  tokenizer.py  train.py
