[project]
name = "bert-tutorial"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nac-39", email = "83295760+nac-39@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bert_tutorial"]
